# PPOISYA

./: .gitignore
MatrixLab/: CMakeLists.txt  Doxyfile
MatrixLab/Google_tests/: CMakeLists.txt
MatrixLab/src/: CMakeLists.txt  main.cpp
MatrixLab/src/matrix/: Matrix.cpp  Matrix.h
MatrixLab/tetsts/: CMakeLists.txt  MatrixTests.cpp
Multiset/: CMakeLists.txt  Doxyfile
Multiset/Google_tests/: CMakeLists.txt
Multiset/src/: main.cpp
Multiset/src/multiset/: CMakeLists.txt  Multiset.cpp  Multiset.h
Multiset/tests/: CMakeLists.txt  MultisetTests.cpp
farm-project/: .gitignore  CMakeLists.txt  README.md  main.cpp
farm-project/animals/: Animal.cpp  Animal.h  Bird.cpp  Bird.h  Chicken.cpp  Chicken.h  Cow.cpp  Cow.h  Duck.cpp  Duck.h  Goat.cpp  Goat.h  Mammal.cpp  Mammal.h  Pig.cpp  Pig.h  Rabbit.cpp  Rabbit.h  Sheep.cpp  Sheep.h
farm-project/buildings/: Barn.cpp  Barn.h  Building.cpp  Building.h  ChickenCoop.cpp  ChickenCoop.h  Warehouse.cpp  Warehouse.h
farm-project/employees/: Employee.cpp  Employee.h  Farmer.cpp  Farmer.h  Milkmaid.cpp  Milkmaid.h  Shepherd.cpp  Shepherd.h
farm-project/equipment/: Equipment.cpp  Equipment.h  Plow.cpp  Plow.h  Tractor.cpp  Tractor.h  Vehicle.cpp  Vehicle.h
farm-project/exceptions/: AnimalExceptions.h  BuildingExceptions.h  EmployeeExceptions.h  EquipmentExceptions.h  FeedExceptions.h  PlantExceptions.h  ProductExceptions.h
farm-project/feed/: CompoundFeed.cpp  CompoundFeed.h  Feed.cpp  Feed.h  Grain.cpp  Grain.h  Hay.cpp  Hay.h
farm-project/plants/: AppleTree.cpp  AppleTree.h  BerryBush.cpp  BerryBush.h  Carrot.cpp  Carrot.h  Corn.cpp  Corn.h  Crop.cpp  Crop.h  Fruit.cpp  Fruit.h  Plant.cpp  Plant.h  Potato.cpp  Potato.h  Tomato.cpp  Tomato.h  Vegetable.cpp  Vegetable.h  Wheat.cpp  Wheat.h
farm-project/products/: Egg.cpp  Egg.h  FruitProduct.cpp  FruitProduct.h  GrainProduct.cpp  GrainProduct.h  Meat.cpp  Meat.h  Milk.cpp  Milk.h  Product.cpp  Product.h  VegetableProduct.cpp  VegetableProduct.h  Wool.cpp  Wool.h
farm-project/tests/: CMakeLists.txt  test_animals.cpp  test_buildings.cpp  test_employees.cpp  test_equipment.cpp  test_feed.cpp  test_plants.cpp  test_products.cpp
